[package]
name = "qc-17-block-production"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Block Production Engine with intelligent transaction selection, PoW/PoS/PBFT support"

[dependencies]
shared-types = { path = "../shared-types" }
shared-bus = { path = "../shared-bus" }
qc-compute = { path = "../qc-compute" }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
primitive-types.workspace = true
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
chrono = "0.4"

# Cryptography for PoW/PoS
sha2 = "0.10"
hex = "0.4"
shared-crypto = { path = "../shared-crypto" }

# For VRF (PoS proposer selection)
# TODO: Add VRF library (e.g., vrf = "0.3" or schnorrkel)

# System info
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
proptest = "1.5"

[features]
default = []
# Future: ASIC-resistant PoW algorithms
asic-resistant = []

[package.metadata.cargo-machete]
# serde_bytes is used via #[serde(with = "serde_bytes")] attribute
ignored = ["serde_bytes"]
