[package]
name = "qc-zkp"
version = "0.1.0"
edition = "2021"
description = "Zero-Knowledge Proof subsystem for Quantum-Chain"
license = "MIT"

[dependencies]
# Field arithmetic
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
# Enable Goldilocks field optimizations
goldilocks = []
# Enable recursive proof aggregation
recursive = []
