[package]
name = "quantum-telemetry"
version = "0.1.0"
edition = "2021"
description = "LGTM Stack telemetry for Quantum-Chain (Loki, Grafana, Tempo, Mimir/Prometheus)"
license = "Unlicense"

[dependencies]
# Tracing foundation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# OpenTelemetry for Tempo (Traces)
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.25"

# Prometheus for Mimir (Metrics)
prometheus = "0.13"
lazy_static = "1.4"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# Serialization for structured logs
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
