[package]
name = "shared-bus"
description = "Event bus for inter-subsystem communication (V2.3 Choreography Pattern)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
shared-types = { path = "../shared-types" }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Unique identifiers
uuid.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
