# ==============================================================================
# Shared Types Crate
# ==============================================================================
# Contains all domain entities and IPC message types shared across subsystems.
# This is the Single Source of Truth for type definitions as mandated by
# Architecture.md v2.2.
# ==============================================================================

[package]
name = "shared-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_with = "3.11"
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
hmac.workspace = true
thiserror.workspace = true
primitive-types.workspace = true
async-trait.workspace = true
parking_lot = "0.12"
tracing.workspace = true
bincode.workspace = true
