[package]
name = "qc-admin"
version = "0.1.0"
edition = "2021"
description = "Quantum-Chain Admin Control Panel - Subsystem Debug & Topology Monitor"
authors = ["Quantum-Chain Contributors"]
license = "MIT"

[[bin]]
name = "qc-admin"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }

# HTTP Client for Admin API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI Arguments
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
